urls updated views and forms created

--- a/ahajahcreo/bidding/templates/bidding/index.html
+++ b/ahajahcreo/bidding/templates/bidding/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Ahajah Creo's Bidding Website</title>
+    <title>Ahajah Creo Bidding Website</title>
 </head>
 <body>
     <h1>Auctions</h1>
