--- a/ahajahcreo/bidding/templates/bidding/auction_detail.html
+++ b/ahajahcreo/bidding/templates/bidding/auction_detail.html
@@ -1,4 +1,6 @@
-<!-- bidding/templates/bidding/auction_detail.html --><!DOCTYPE html>
+
+
+<!DOCTYPE html>
 <html>
 <head>
     <title>{{ auction.title }}</title>
