--- a/ahajahcreo/bidding/templates/bidding/index.html
+++ b/ahajahcreo/bidding/templates/bidding/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Ahajah Creo's Bidding Site</title>
+    <title>Auctions</title>
 </head>
 <body>
     <h1>Auctions</h1>
@@ -14,3 +14,4 @@
     <p><a href="{% url 'create_auction' %}">Create New Auction</a></p>
 </body>
 </html>
+
