Some style has been added now

--- a/ahajahcreo/bidding/templates/bidding/index.html
+++ b/ahajahcreo/bidding/templates/bidding/index.html
@@ -1,17 +1,15 @@
+{% extends 'base.html' %}
 
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Auctions</title>
-</head>
-<body>
-    <h1>Auctions</h1>
-    <ul>
-        {% for auction in auctions %}
-        <li><a href="{% url 'auction_detail' auction.id %}">{{ auction.title }}</a></li>
-        {% endfor %}
-    </ul>
-    <p><a href="{% url 'create_auction' %}">Create New Auction</a></p>
-</body>
-</html>
+{% block title %}Auctions{% endblock %}
+
+{% block content %}
+<h1>Auctions</h1>
+<ul>
+    {% for auction in auctions %}
+    <li><a href="{% url 'auction_detail' auction.id %}">{{ auction.title }}</a></li>
+    {% endfor %}
+</ul>
+<p><a href="{% url 'create_auction' %}">Create New Auction</a></p>
+{% endblock %}
+
 
